[package]
name = "webrtc-rs-sdp"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
description = "Pure Rust implementation of SDP for WebRTC"
license = "MIT"
documentation = "https://docs.rs/webrtc-rs-sdp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sdp"
keywords = ["jsep", "sdp", "webrtc"]
categories = ["network-programming", "parsing"]

[dependencies]
derive_more = { version = "0.99.13", features = ["as_mut", "as_ref", "deref", "deref_mut", "display", "error", "from", "from_str", "into"], default-features = false }
once_cell = { version = "1.7", features = ["parking_lot", "std"], default-features = false }
regex = { version = "1.4", features = ["perf", "std"], default-features = false }
smallvec = "1.6"
smart-default = "0.6"
smartstring = "0.2.6"
url = "2.1"

rand = "0.8"
thiserror = "1.0.23"
